fix Continue Shopping

--- a/web/view-cart.html
+++ b/web/view-cart.html
@@ -349,7 +349,7 @@
                     <div style="font-size: 4rem; margin-bottom: 20px; color: #ddd;">🛒</div>
                     <h3>Giỏ hàng của bạn đang trống</h3>
                     <p>Hãy thêm một số sản phẩm vào giỏ hàng để tiếp tục mua sắm</p>
-                    <button class="btn btn-continue" style="margin-top: 20px;" onclick="window.location.href = '/Project_G2/productservlet'">
+                    <button class="btn btn-continue" style="margin-top: 20px;" onclick="window.location.href = '/CES/homepageservlet'">
                         🛍️ Tiếp Tục Mua Sắm
                     </button>
                 </div>
